# confetti-todo

./: .gitignore  CONTRIBUTING.md  FUNCTIONALITY_LIST.md  LICENSE  README.md  index.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run.sh  server.py  setup.py  setup.sh  test.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml  codeql.yml
assets/css/: main.css
assets/js/: app.js  config.js
assets/js/modules/: energy.js  stats.js  tasks.js  ui.js  websocket.js  working-zone.js
assets/js/utils/: dom.js  events.js  storage.js
docs/: energy_regeneration_api.md  energy_system_api.md  energy_system_implementation_summary.md
tests/: README.md  conftest.py  energy_regeneration_test_report.md  test_5m_effort_feature.py  test_app.py  test_checkbox_bug.py  test_complete_coverage_final.py  test_comprehensive_coverage.py  test_due_date_feature.py  test_energy_regeneration.py  test_energy_regeneration_e2e.py  test_energy_system.py  test_energy_system_e2e.py  test_european_date_format.py  test_metadata_order.py  test_mobile_ui_comprehensive.py  test_overdue_contrast_simple.py  test_overdue_date_contrast.py  test_quick_actions_desktop_hidden.py  test_stacked_checkbox_progress.py  test_stop_button_behavior.py  test_stop_button_double_click_bug.py  test_stop_button_real_scenario.py  test_stop_button_user_simulation.py  test_subtask_expansion.py  test_switch_modal_final.py  test_switch_modal_fix.py  test_switch_modal_overlay_bug.py  test_switch_modal_overlay_bug_simple.py  test_switch_modal_overlay_fixed.py  test_switch_modal_simple.py  test_switch_task_modal.py  test_test_mode.py  test_utils.py
tests/e2e/: test_switch_task_modal_e2e.py
tests/integration/: test_app_integration.py
